# startup-template-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  cloudbuild.yaml  data.json  deploy.sh  pyproject.toml  readme.md  requirements.txt
app/: data.py  main.py
app/agent_things/models/: source_model.py
app/agent_things/repositories/: sources_repository.py
app/agents/models/: agent_sources_model.py
app/agents/repositories/: agent_sources_repository.py
app/agents/services/: agent_sources_service.py
app/agents/tests/: conftest.py  test_repo.py  test_sources.py
app/conversations/: conversation_agents.py  conversation_models.py  conversations_classes.py  conversations_router.py
app/generics/: readme.md
app/generics/controller/: generic_controller.py
app/generics/models/: generic_model.py
app/generics/repositories/: generic_repository.py
app/generics/services/: generic_service.py
app/image_gen/: image_gen.py  image_utils_service.py  img_fal_service.py  readme.md
app/llm/: ai_image.py  classes.py  gemini_service.py  llm_router.py
app/modules/mongo/: mongo.py  mongo_controller.py
app/storage/: image_utils_service.py  storage.py  storage_models.py
app/tts/: classes.py  google_tts.py  tts_router.py
app/video_analizer/: architecture.excalidraw
app/video_analizer/controllers/: tiktok_controller.py  video_analizer_controller.py
app/video_analizer/models/: model.py
app/video_analizer/repositories/: tiktok_repository.py
app/video_analizer/services/: tiktok_service.py  video_analizer_service.py  youtube_service.py
app/video_analizer/tests/: test_repo.py  test_services.py  test_video_analysis.py
app/video_generator/: architecture.excalidraw
app/video_generator/controller/: video_controller.py
app/video_generator/models/: video_model.py
app/video_generator/repositories/: video_repository.py
app/video_generator/services/: video_service.py
docs/: readme.md
notebooks/: gemini.ipynb  image_generation.ipynb  pydantic.ipynb  trying.ipynb  tts.ipynb
notebooks/tiktoks/: chartjs_converter.md  tiktok_analizer.ipynb
scripts/: env-parser.py
tools/demucs/: demucs_utils.py
tools/tiktok_analizer/: __init__.py  conda_config.yml  readme.md  tiktik_analizer.py  tiktok_downloader.ipynb  tiktok_downloader.py  video.excalidraw  video_analisis.ipynb  video_extraction.py
tools/trend_monitor/: trend_monitor.py  trends.ipynb
tools/whisper/: groq_whisper.py
tools/youtube/: yt_dlp_utils.py  yt_downloads.py
