[tool.poetry]
name = "dataclouder-template-python"
version = "0.0.1"
description = "python template for new projects"
authors = ["adamo jordan <adamo.figueroa@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "0.110.1" }
uvicorn = { extras = ["standard"], version = "^0.29.0" }
oauth2client = "^4.1.3"
google-cloud-texttospeech = "^2.24.0"
google-generativeai = "^0.8.4"
python-dotenv = "^1.0.1"
fal-client = "^0.5.7"
pillow = "^10.4.0"
pydantic-ai = "^0.0.24"
dataclouder-tts = "^0.0.6"
pymongo = "^4.10.1"
dataclouder-core = "^0.0.5"
dataclouder-agent-cards = "^0.0.12"
dataclouder-conversation-ai-cards = "^0.0.9"
moviepy = "^2.1.2"
opencv-python = "^4.11.0.86"                                #for video extraction
groq = "^0.18.0"
yt-dlp = "^2025.2.19"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
ipykernel = "^6.29.5"

[tool.ruff]
line-length = 180
fix = true  # Enable auto-fixing
unsafe-fixes = false  # Enable unsafe fixes


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
