[tool.poetry]
name = "startup-template-python"
version = "0.0.1"
description = "python template for new projects"
authors = ["datataclouder  <adamo.figueroa@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"                                         # Python version
fastapi = { extras = ["all"], version = "0.110.1" }      # Python web framework
uvicorn = { extras = ["standard"], version = "^0.29.0" } # ASGI server
oauth2client = "^4.1.3"                                  # for authentication with Google Cloud
google-cloud-texttospeech = "^2.24.0"                    # To generate audio from text
google-generativeai = "^0.8.4"                           # To Use Gemini and other vertex AI models
google-dotenv = "^1.0.1"                                 # To use .env files
fal-client = "^0.5.7"                                    # To generate some images with different models
pillow = "^10.4.0"                                       # To help image manipulation
pydantic-ai = "^0.0.52"                                  # For Agentic Framework, AI models
pymongo = "^4.10.1"                                      # To connect with mongo db
groq = "^0.18.0"                                         # To connect with Groq AI models
pandas = "^2.2.3"                                        # To help with data manipulation
google-cloud-storage = "^3.1.0"                          # To connect with Google Cloud Storage
dataclouder-tts = "^0.0.6"                               # To generate audio from text
dataclouder-core = "^0.0.5"                              # To connect with core services
dataclouder-agent-cards = "^0.0.12"                      # To connect with agent cards
dataclouder-conversation-ai-cards = "^0.0.9"             # To connect with conversation cards
dataclouder-mongo = "^0.0.6"                             # To connect with mongo db


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
ipykernel = "^6.29.5"

[tool.ruff]
line-length = 180
fix = true           # Enable auto-fixing
unsafe-fixes = false # Enable unsafe fixes


[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "PYI",  # pyright static type checker
    "UP",   # pyupgrade
    "I",    # isort
    "PL",   # pylint
    "PLC",
    "PLW",
    "PLE",
    "PLC",
    "ANN",
    "FAST",
    "TCH",
]

ignore = ["TC004", "TC002", "E402"] # Add this line


[tool.ruff.lint.extend-per-file-ignores]
"*.ipynb" = [
    "E402",
    "E501",
    "W293",
    "W291",
    "B007",
    "B006",
    "B018",
    "F841",
    "F821",
    "W191",
    "TC001",
    "ANN201",
    "ANN001",
    "ANN204",
    "ANN401",
    "UP006",
    "UP035",
    "SIM115",
    "SIM118",
    "PLR0913",
    "PLR2004",
    "PLR2004",
    "PLW2901",
    "I001",
    "ANN202",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
